<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context=".MapsActivity" />

    <RadioGroup
        android:id="@+id/radio_group_list_selector"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="#80000000"
        android:padding="4dp" >

        <Button
            android:id="@+id/leggTilBestillingKnapp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/BestillRomKnapp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:textColor="@color/textcolor_radiobutton"
            android:onClick="leggTilBestilling"/>
        <View
            android:id="@+id/VerticalLine"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/visBestillingerKnapp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/SeReservasjoner"
            android:layout_weight="1"
            android:textColor="@color/textcolor_radiobutton"
            android:onClick="visBestillinger"/>
        <View
            android:id="@+id/VerticalLine"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/leggTilRomKnapp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/LeggTilRom"
            android:layout_weight="1"
            android:textColor="@color/textcolor_radiobutton"
            android:onClick="leggTilRom"/>
    </RadioGroup>
</FrameLayout>